# libArgvCodec

./: .travis.yml  ArgMgr.sln  ArgumentManager.sln  ArgumentManager2008.sln  ArgumentManager2010.sln  CHANGES  CMakeLists.txt  INSTALL.md  README.md  Rules.Linux.md  Rules.Linux.txt  Rules.Windows.md  Rules.Windows.txt  TODO.txt  Tests.Windows.md  appveyor.yml  clean.bat  copyright.txt  copyright_install.bat  dump.txt  header.txt  header_install.bat  libargvcodec2008.sln  libargvcodec2010.sln  prompt.bat
ArgEncoder/: ArgEncoder.vcproj  ArgEncoder.vcxproj  main.cpp
ArgMgr/: ArgumentManager.cpp  dllmain.cpp
ArgMgrTest/: ArgMgrTest.vcproj  TestArgumentManager.cpp  gtest_emulator - Copy.h  gtest_emulator.cpp
ArgumentLister/: ArgumentLister.cpp  ArgumentLister.vcproj  arguments_tests.bat  dump.txt
ArgumentManager/: ArgMgr.vcproj  ArgumentList.cpp  ArgumentList.h  ArgumentManager.cpp  ArgumentManager.h  ArgumentManager.vcproj  ArgumentManager.vcxproj  ArgumentManager.vcxproj.filters  CmdPromptArgumentCodec.cpp  CmdPromptArgumentCodec.h  CreateProcessArgumentCodec.cpp  CreateProcessArgumentCodec.h  IArgumentDecoder.h  IArgumentEncoder.h  Rules.txt  TODO.txt  os.cpp  os.h  utils.cpp  utils.h
ArgumentManagerTest/: ArgumentLister.cpp  ArgumentLister.h  ArgumentManagerTest.vcproj  ArgumentManagerTest.vcxproj  ArgumentManagerTest.vcxproj.filters  TODO.txt  TestArgumentList.cpp  TestArgumentManager - Copy (2).cpp  TestArgumentManager - Copy.cpp  TestArgumentManager.cpp  TestCmdPromptArgumentCodec.cpp  TestCreateProcessArgumentCodec.cpp  TestEncodeCommandLine002.txt  gtest_emulator - Copy.cpp  gtest_emulator.h  main.cpp  postbuild.bat  shellCommandLines.new.txt  testInitString.all.txt  testInitString.txt
References/: Everyone quotes command line arguments the wrong way – Twisty Little Passages, All Alike.url  dropt.url  open source - best C++ command line argument parser - Stack Overflow.url
ShowArgs/: ShowArgs.cpp  ShowArgs.vcproj  ShowArgs.vcxproj  showargs.vcproj
argencoder/: argencoder.vcproj  argencoder.vcxproj  argencoder.vcxproj.filters  main.cpp
cmake/: libargvcodec-config-version.cmake.in  libargvcodec-config.cmake.in
docs/: Doxyfile.in  libArgvCodec.xcf
installer/: installer.bat  installer.vcproj  installer.vcxproj  installer.vcxproj.filters
libArgvCodec/: ArgumentList.cpp  ArgumentList.h  CmdPromptArgumentCodec.cpp  CmdPromptArgumentCodec.h  CreateProcessArgumentCodec.cpp  CreateProcessArgumentCodec.h  IArgumentDecoder.h  IArgumentEncoder.h  TODO.txt  dllmain.cpp  libargvcodec.h  libargvcodec.vcxproj.filters  macros.h  os.cpp  os.h  targetver.h  utils.cpp  utils.h
libArgvCodecTest/: ArgumentLister.cpp  ArgumentLister.h  TestArgumentList.cpp  TestArgumentList.h  TestCmdPromptArgumentCodec.cpp  TestCmdPromptArgumentCodec.h  TestCreateProcessArgumentCodec.cpp  TestCreateProcessArgumentCodec.h  TestUtils.cpp  TestUtils.h  gtesthelper.cpp  gtesthelper.h  libargvcodectest.vcproj  libargvcodectest.vcxproj  libargvcodectest.vcxproj.filters  main.cpp  targetver.h
libArgvCodecValidator/: ValidationRule.h  ValidationRuleSorter.cpp  ValidationRuleSorter.h  libargvcodecvalidator.h  libargvcodecvalidator.vcxproj
libPromptConsole/: libPromptConsole.cpp  libPromptConsole.h  libPromptConsole.vcxproj.filters
libargvcodec/: ArgMgrExports.h  ArgumentList.cpp  ArgumentList.h  ArgumentManager.vcproj  CmdPromptArgumentCodec.cpp  CmdPromptArgumentCodec.h  CreateProcessArgumentCodec.cpp  CreateProcessArgumentCodec.h  IArgumentDecoder.h  IArgumentEncoder.h  TODO.txt  ValidationResultList.cpp  ValidationResultList.h  ValidationRule.cpp  ValidationRule.h  ValidationRuleList.cpp  ValidationRuleList.h  ValidationRuleSorter.cpp  ValidationRuleSorter.h  Validator.cpp  Validator.h  advancedsort.h  libargvcodec.h  libargvcodec.vcproj  libargvcodec.vcxproj  libargvcodec.vcxproj.filters  macros.h  os.cpp  os.h  utils.cpp  utils.h
libargvcodectest/: ArgumentLister.cpp  ArgumentLister.h  ArgumentManagerTest.vcxproj  TestArgumentList.cpp  TestArgumentList.h  TestCmdPromptArgumentCodec.cpp  TestCmdPromptArgumentCodec.h  TestCreateProcessArgumentCodec.cpp  TestCreateProcessArgumentCodec.h  TestUtils.cpp  TestValidator.cpp  TestValidator.h  gtest_emulator.cpp  gtest_emulator.h  gtesthelper.cpp  gtesthelper.h  libargvcodectest.vcproj  libargvcodectest.vcxproj  libargvcodectest.vcxproj.filters  main.cpp
libargvcodecvalidator/: ValidationRule.cpp  ValidationRule.h  ValidationRuleList.cpp  ValidationRuleList.h  ValidationRuleSorter.cpp  ValidationRuleSorter.h  Validator.cpp  Validator.h  libargvcodecvalidator.h  libargvcodecvalidator.vcproj  libargvcodecvalidator.vcxproj  libargvcodecvalidator.vcxproj.filters
promptconsole/: promptconsole.cpp  promptconsole.vcproj  promptconsole.vcxproj  promptconsole.vcxproj.filters
samples/: CMakeLists.txt  samples.cpp
showargs/: showargs.cpp  (+3 more)
src/ArgEncoder/: ArgEncoder.cpp  CMakeLists.txt
src/ShowArgs/: CMakeLists.txt  ShowArgs.cpp  showargs.cpp  showargs.vcxproj.filters
src/libArgvCodec/: ArgumentList.cpp  CMakeLists.txt  CmdPromptArgumentCodec.cpp  CreateProcessArgumentCodec.cpp  TerminalArgumentCodec.cpp  config.h.in  libargvcodec.vcproj  libargvcodec.vcxproj  version.h.in
src/libPromptConsole/: CMakeLists.txt  libPromptConsole.cpp  libPromptConsole.vcproj  libPromptConsole.vcxproj
test/libArgvCodecTest/: ArgumentLister.cpp  ArgumentLister.h  CMakeLists.txt  Test.CommandLines.Linux.txt  Test.CommandLines.Windows.txt  TestArgumentList.cpp  TestArgumentList.h  TestCmdPromptArgumentCodec.cpp  TestCmdPromptArgumentCodec.h  TestCreateProcessArgumentCodec.cpp  TestCreateProcessArgumentCodec.h  TestShellCommandLines.txt  TestTerminalArgumentCodec.cpp  TestTerminalArgumentCodec.h  TestTerminalArgumentCodec.testSystem.txt  TestUtils.cpp  TestUtils.h  TestValidator.cpp  libargvcodectest.vcproj  main.cpp
test/libArgvCodecValidator/: AdvancedSort.h  CMakeLists.txt  ValidationRule.cpp  ValidationRule.h  ValidationRuleList.h  ValidationRuleSorter.cpp  ValidationRuleSorter.h  Validator.cpp  Validator.h  libargvcodecvalidator.h  libargvcodecvalidator.vcproj
(+17 files in other folders)
